# src/main/java/pl/sloniec/delegate/AppointmentsDelegate.java
@@ -9,13 +9,10 @@ import pl.sloniec.controller.AppointmentsApiDelegate;
 import pl.sloniec.domain.Appointment;
 import pl.sloniec.dto.AppointmentDTO;
 import pl.sloniec.mapper.AppointmentMapper;
-import pl.sloniec.mapper.AppointmentMapperImpl;
 import pl.sloniec.service.AppointmentService;
 import pl.sloniec.service.parser.AppointmentCSVParser;
 
 import javax.persistence.EntityNotFoundException;
-import java.time.OffsetDateTime;
-import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.UUID;
 
@@ -26,21 +23,6 @@ public class AppointmentsDelegate implements AppointmentsApiDelegate {
     private final AppointmentService appointmentService;
     private final AppointmentMapper appointmentMapper;
     private final AppointmentCSVParser appointmentCSVParser;
-
-    public static void main(String[] args) {
-        AppointmentDTO dto = new AppointmentDTO()
-                .id(UUID.randomUUID())
-                .clientId(UUID.randomUUID())
-                .startTime(OffsetDateTime.now().minus(1, ChronoUnit.DAYS))
-                .endTime(OffsetDateTime.now());
-
-        System.out.println(dto);
-
-        AppointmentMapper mapper = new AppointmentMapperImpl();
-        Appointment appointment = mapper.fromDTO(dto);
-        System.out.println(appointment);
-
-    }
 
     @Override
     public ResponseEntity<List<AppointmentDTO>> listAppointments() {
@@ -59,8 +41,7 @@ public class AppointmentsDelegate implements AppointmentsApiDelegate {
 
     @Override
     public ResponseEntity<AppointmentDTO> createAppointment(AppointmentDTO appointmentDTO) {
-        Appointment appointment1 = appointmentMapper.fromDTO(appointmentDTO);
-        Appointment appointment = appointmentService.create(appointment1);
+        Appointment appointment = appointmentService.create(appointmentMapper.fromDTO(appointmentDTO));
         return ResponseEntity.status(HttpStatus.CREATED)
                 .body(appointmentMapper.toDTO(appointment));
     }
